src/style/components/_d-datepicker.new.scss
/* ... */
// TODO: Revisar con Mati diseño del time
// .react-datepicker__input-time-container {
//   clear: both;
//   width: 100%;
//   float: left;
//   margin: 5px 0 10px 15px;
//   text-align: left;

//   .react-datepicker-time__caption {
//     display: inline-block;
//   }

//   .react-datepicker-time__input-container {
//     display: inline-block;

//     .react-datepicker-time__input {
//       display: inline-block;
//       margin-left: 10px;

//       input {
//         width: auto;
//       }

//       input[type="time"]::-webkit-inner-spin-button,
//       input[type="time"]::-webkit-outer-spin-button {
//         -webkit-appearance: none;
//         margin: 0;
//       }

//       input[type="time"] {
//         -moz-appearance: textfield;
//       }
//     }

//     .react-datepicker-time__delimiter {
//       margin-left: 5px;
//       display: inline-block;
//     }
//   }
// }

// .react-datepicker__time-container {
//   float: right;
//   border-left: $datepicker__border;
//   width: 85px;

//   &--with-today-button {
//     display: inline;
//     border: 1px solid #aeaeae;
//     border-radius: 0.3rem;
//     position: absolute;
//     right: -87px;
//     top: 0;
//   }

//   .react-datepicker__time {
//     position: relative;
//     background: white;
//     border-bottom-right-radius: 0.3rem;

//     .react-datepicker__time-box {
//       width: 85px;
//       overflow-x: hidden;
//       margin: 0 auto;
//       text-align: center;
//       border-bottom-right-radius: 0.3rem;

//       ul.react-datepicker__time-list {
//         list-style: none;
//         margin: 0;
//         height: calc(195px + (#{$datepicker__item-size} / 2));
//         overflow-y: scroll;
//         padding-right: 0;
//         padding-left: 0;
//         width: 100%;
//         box-sizing: content-box;

//         li.react-datepicker__time-list-item {
//           height: 30px;
//           padding: 5px 10px;
//           white-space: nowrap;

//           &:hover {
//             cursor: pointer;
//             background-color: $datepicker__background-color;
//           }

//           &--selected {
//             background-color: $datepicker__selected-color;
//             color: white;
//             font-weight: bold;

//             &:hover {
//               background-color: $datepicker__selected-color;
//             }
//           }

//           &--disabled {
//             color: $datepicker__muted-color;

//             &:hover {
//               cursor: default;
//               background-color: transparent;
//             }
//           }
//         }
//       }
//     }
//   }
// }
// END TODO: Revisar con Mati diseño del time

.react-datepicker__week-number {
  color: var(--#{$prefix}datepicker-week-number-color);
  display: inline-block;
  width: var(--#{$prefix}datepicker-day-width);
  line-height: var(--#{$prefix}datepicker-day-width);
  text-align: center;
  font-size: var(--#{$prefix}datepicker-day-names-font-size);

  &.react-datepicker__week-number--clickable {
    cursor: pointer;
    color: var(--#{$prefix}body-color);

    &.react-datepicker__week-number--selected {
      border-radius: var(--#{$prefix}datepicker-week-number-border-radius);
      background-color: var(--#{$prefix}datepicker-week-number-selected-background-color);
      color: var(--#{$prefix}datepicker-week-number-selected-color);
    }

    &:hover {
      border-radius: var(--#{$prefix}datepicker-week-number-border-radius);
      background-color: var(--#{$prefix}datepicker-week-number-hover-background-color);
      color: var(--#{$prefix}datepicker-week-number-hover-color);
    }
  }
}

.react-datepicker__day-names {
  white-space: nowrap;
  display: inline-flex;
  gap: var(--#{$prefix}datepicker-body-gap);
}

.react-datepicker__week {
  white-space: nowrap;
  display: inline-flex;
  gap: var(--#{$prefix}datepicker-body-gap);
  align-self: center;
}

.react-datepicker__day-name,
.react-datepicker__day,
.react-datepicker__time-name {
  color: var(--#{$prefix}datepicker-day-names-color);
  display: inline-block;
  text-align: center;
  width: var(--#{$prefix}datepicker-day-width);
  line-height: var(--#{$prefix}datepicker-day-width);
  font-size: var(--#{$prefix}datepicker-day-names-font-size);

}

.react-datepicker__day--outside-month {
  color: var(--#{$prefix}datepicker-day-outside-month-color);
}
/* ... */

